--- a/knowledge_base_creation.ipynb
+++ b/knowledge_base_creation.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File type counts: {'': 2, '.js': 12, '.html': 4, '.ico': 1, '.htm': 1281, '.jpg': 279, '.gif': 251, '.png': 1, '.wav': 6, '.mid': 1, '.mp3': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -30,8 +38,10 @@
     "                relative_path = os.path.relpath(full_path, start=source_directory)\n",
     "                htm_files.append(relative_path)\n",
     "                \n",
-    "                # Create a new filename by replacing '/' with '-' and changing extension to '.html'\n",
-    "                new_filename = relative_path.replace(os.sep, '-').replace('.htm', '.html')\n",
+    "                # Create a new filename by replacing '/' with '---' and changing extension to '.html'\n",
+    "                # Using --- because it is not likely to be in any of the filenames, so can easily be replaced\n",
+    "                # with / later on when creating citation urls\n",
+    "                new_filename = relative_path.replace(os.sep, '---').replace('.htm', '.html')\n",
     "                target_path = os.path.join(target_directory, new_filename)\n",
     "                \n",
     "                # Copy file to the new location with the new name\n",
@@ -47,8 +57,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "streamlitenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
